--- a/content/期末考試.html
+++ b/content/期末考試.html
@@ -141,11 +141,10 @@ img.add_border {
         </header>
     <div id="tipue_search_content">about << <a href='about.html'>Previous</a> <a href='Jansens linkage.html'>Next</a> >> Jansens linkage<br /><h1>期末考試</h1>
 <p>第一階段</p>
-<p>maArm單一零件檔案連結(Solidworks)</p>
-<p>maArm零件組立檔案連結(Solidworks)</p>
+<p><a href="https://drive.google.com/file/d/1wOWrF-pAr2GnBuyBSd_eQ84RwSHlNWaT/view?usp=sharing">maArm單一零件檔案連結</a>(<a href="https://drive.google.com/file/d/1wOWrF-pAr2GnBuyBSd_eQ84RwSHlNWaT/view?usp=sharing">Solidworks2021</a>)(<a href="https://drive.google.com/file/d/19ZC01Xu2bsudRKk4s2AklgoPQUl8q6y1/view?usp=sharing">轉換成sat檔</a>)</p>
+<p>maArm零件組立檔案連結</p>
 <p>(影片呈現單一零件與組立)</p>
-<p></p>
-<br />about << <a href='about.html'>Previous</a> <a href='Jansens linkage.html'>Next</a> >> Jansens linkage</div>
+<p></p><br />about << <a href='about.html'>Previous</a> <a href='Jansens linkage.html'>Next</a> >> Jansens linkage</div>
         
     <!-- footer -->
       <div class="container">
