change left right

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -6,11 +6,12 @@
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Web Links: </span></span></span></span></span></span><span style="vertical-align: inherit;"><a href="https://40871106.github.io/cad2021_hw/content/index.html"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">HTTPS</span></span></span></span></span></a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> : </span></span></span></span></span></span><a href="https://40871106.github.io/cad2021_hw/content/index.html"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">//40871106.github.io/cad2021_hw/content/index.html</span></span></span></span></span></span></a></p>
 <h1>期末考試</h1>
 <p>第一階段</p>
-<p>maArm單一零件檔案連結(Solidworks)</p>
-<p>maArm零件組立檔案連結(Solidworks)</p>
-<p>(影片呈現單一零件與組立)</p>
+<p><a href="https://drive.google.com/file/d/1wOWrF-pAr2GnBuyBSd_eQ84RwSHlNWaT/view?usp=sharing">maArm單一零件檔案連結</a>(<a href="https://drive.google.com/file/d/1wOWrF-pAr2GnBuyBSd_eQ84RwSHlNWaT/view?usp=sharing">Solidworks2021</a>)(<a href="https://drive.google.com/file/d/19ZC01Xu2bsudRKk4s2AklgoPQUl8q6y1/view?usp=sharing">轉換成sat檔</a>)</p>
+<p>maArm零件組立檔案連結(<a href="https://drive.google.com/file/d/1c_vkPRtAtvcIcw2UtuDWJdUTHxEW05BG/view?usp=sharing">stl</a>)(<a href="https://drive.google.com/file/d/1HQkHRgcza51nBoQxw2v73HCovbZCosjP/view?usp=sharing">sat</a>)</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/k9unmprTtpg" title="YouTube video player" width="1280"></iframe></p>
+<p>左右對調 :</p>
 <p></p>
-<h1>Jansens linkage</h1>
+<p></p><h1>Jansens linkage</h1>
 <p><a href="https://drive.google.com/drive/folders/1fHA4x6ZD1FI2IPIMPYXvDP7IrK0mcjn3?usp=sharing">Soildworks 零件下載</a>(含延伸題)</p>
 <p><a href="https://drive.google.com/drive/folders/1fHA4x6ZD1FI2IPIMPYXvDP7IrK0mcjn3?usp=sharing">Solisworks 組合下載</a>(含延伸題)</p>
 <p><span><a href="https://drive.google.com/drive/folders/1fHA4x6ZD1FI2IPIMPYXvDP7IrK0mcjn3?usp=sharing">CoppeliaSim 場景檔下載</a>(含延伸題)</span></p>
