--- a/content/期末考試.html
+++ b/content/期末考試.html
@@ -142,8 +142,15 @@ img.add_border {
     <div id="tipue_search_content">about << <a href='about.html'>Previous</a> <a href='Jansens linkage.html'>Next</a> >> Jansens linkage<br /><h1>期末考試</h1>
 <p>第一階段</p>
 <p><a href="https://drive.google.com/file/d/1wOWrF-pAr2GnBuyBSd_eQ84RwSHlNWaT/view?usp=sharing">maArm單一零件檔案連結</a>(<a href="https://drive.google.com/file/d/1wOWrF-pAr2GnBuyBSd_eQ84RwSHlNWaT/view?usp=sharing">Solidworks2021</a>)(<a href="https://drive.google.com/file/d/19ZC01Xu2bsudRKk4s2AklgoPQUl8q6y1/view?usp=sharing">轉換成sat檔</a>)</p>
-<p>maArm零件組立檔案連結</p>
-<p>(影片呈現單一零件與組立)</p>
+<p>maArm零件組立檔案連結(<a href="https://drive.google.com/file/d/1c_vkPRtAtvcIcw2UtuDWJdUTHxEW05BG/view?usp=sharing">stl</a>)(<a href="https://drive.google.com/file/d/1HQkHRgcza51nBoQxw2v73HCovbZCosjP/view?usp=sharing">sat</a>)</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/k9unmprTtpg" title="YouTube video player" width="1280"></iframe></p>
+<p>左右對調 :</p>
+<p><img alt="" height="626" src="./../images/左右對調.jpg" width="1229"/></p>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/HBVPVrpvz_8" title="YouTube video player" width="1280"></iframe></p>
+<p><a href="https://drive.google.com/file/d/1s5K9KUTxLlWABr_OLMPEZADe-ZEEMifM/view?usp=sharing">左右對調零件檔&amp;組合檔</a></p>
+<p></p>
+<p></p>
 <p></p><br />about << <a href='about.html'>Previous</a> <a href='Jansens linkage.html'>Next</a> >> Jansens linkage</div>
         
     <!-- footer -->
