--- a/content/期末考試.html
+++ b/content/期末考試.html
@@ -155,8 +155,29 @@ img.add_border {
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="697" src="https://www.youtube.com/embed/ZJQG6vWitRY" title="YouTube video player" width="1239"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="697" src="https://www.youtube.com/embed/9Ci1GwdDPoI" title="YouTube video player" width="1239"></iframe></p>
 <p></p>
-<p></p>
-<p></p>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 20,
+  buttonFrameLength: 10,
+  buttonFrameOffset: 5,
+  frameStops: {
+  },
+};
+</script>
+<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="製作過程-wink-files" data-varname="/static" height="150" width="300">
+<source src="製作過程.mp4" type="video/mp4"/>
+</video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div>
 <p></p>
 <p></p><br />about << <a href='about.html'>Previous</a> <a href='Jansens linkage.html'>Next</a> >> Jansens linkage</div>
         
